# apis/prisma-openapi/openapi.yaml
@@ -307,6 +307,10 @@ components:
         updatedAt:
           type: string
           format: date-time
+        orders:
+          type: array
+          items:
+            $ref: "#/components/schemas/PublishingPlatformOrder"
         deletedAt:
           type: string
           format: date-time
@@ -320,6 +324,7 @@ components:
         - publishRate
         - createdAt
         - updatedAt
+        - orders
     SystemConfig:
       type: object
       properties:
@@ -1037,6 +1042,10 @@ components:
           $ref: "#/components/schemas/Article"
         creator:
           $ref: "#/components/schemas/User"
+        platformOrders:
+          type: array
+          items:
+            $ref: "#/components/schemas/PublishingPlatformOrder"
         deletedAt:
           type: string
           format: date-time
@@ -1047,6 +1056,51 @@ components:
         - createdAt
         - updatedAt
         - article
+        - platformOrders
+    PublishingPlatformOrder:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        scheduleId:
+          type: integer
+          format: int32
+        platformId:
+          type: integer
+          format: int32
+        rmOrderId:
+          type: string
+        rmStatus:
+          type: integer
+          format: int32
+        rmResponseMessage:
+          type: string
+        rmResourceName:
+          type: string
+        lastSyncedAt:
+          type: string
+          format: date-time
+        createdAt:
+          type: string
+          format: date-time
+        updatedAt:
+          type: string
+          format: date-time
+        schedule:
+          $ref: "#/components/schemas/PublishingSchedule"
+        platform:
+          $ref: "#/components/schemas/PublishingPlatform"
+      required:
+        - id
+        - scheduleId
+        - platformId
+        - rmOrderId
+        - rmStatus
+        - createdAt
+        - updatedAt
+        - schedule
+        - platform
     Role:
       type: string
       enum:
